# jotspot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: annotation.rs  main.rs  metadata.rs  ui.rs
