[package]
name = "jotspot"
authors = ["ricardofares"]
categories = ["command-line-interface", "gui"]
description = "A versatile text-based user interface (TUI) tool designed to simplify the annotation process"
version = "0.1.0"
edition = "2021"
keywords = ["ncurses", "TUI", "jot", "annotation", "notes"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ricardofares/jotspot/"

[dependencies]
cursive = "0.20.0"
